# first-sip

./: .air.toml  .gitignore  .golangci.yml  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  go.mod  go.sum
.claude/commands/: dev.md
.github/workflows/: publish-artifacts-latest.yaml  publish-artifacts.yaml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json  v1.1-MILESTONE-AUDIT.md  v1.2-MILESTONE-AUDIT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/debug/: dashboard-tile-raw-plugin-name.md  settings-validation-silent-fail.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md  v1.1-MILESTONE-AUDIT.md  v1.1-REQUIREMENTS.md  v1.1-ROADMAP.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
charts/first-sip/: Chart.yaml  values.yaml
cmd/server/: main.go
deploy/k8s/: sidecar-deployment.yaml
infra/app/: values-dev.yaml  values-prd.yaml
infra/argocd/: repo-secret.yaml
internal/apikeys/: handlers.go  providers.go  service.go  viewmodel.go
internal/apikeysvm/: types.go
internal/auth/: goth.go  handlers.go  middleware.go
internal/briefings/: handlers.go  templates.templ  templates_templ.go
internal/config/: config.go
internal/crypto/: crypto.go
internal/dashboard/: handlers.go  viewmodel.go
internal/database/: db.go  migrations.go  seed.go
internal/health/: handler.go  (+1 more)
sidecar/: Dockerfile  executor.py  main.py  models.py  pyproject.toml  worker.py
(+197 files in other folders)
